alignment on mobile fix

--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -37,3 +37,4 @@
     .pageContainer
         .content
             flex-direction: column
+            align-items: center 
